# TaskScheduler

./: CMakeLists.txt  appveyor.yml
SampleProject/: CMakeLists.txt
SampleProject/Source/Private/: Main.cpp
SampleProject/Source/Public/: Point2d.h
TaskScheduler/: CMakeLists.txt
TaskScheduler/Source/Private/: Main.cpp  TaskScheduler.cpp
TaskScheduler/Source/Public/: TaskScheduler.h
UnitTest/: CMakeLists.txt
UnitTest/Source/Private/: Main.cpp
